chores: add dark mode compatible scroll bar and some minor fixes

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 :root {
 	font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	--scroll-track-color: theme("colors.zinc.700");
+	--scroll-thumb-color: theme("colors.zinc.600");
+	--scroll-thumb-hover-clr: theme("colors.zinc.500");
 }
 @supports (font-variation-settings: normal) {
 	:root {
@@ -19,25 +22,6 @@
 	input[type="number"]::-webkit-outer-spin-button {
 		appearance: none;
 		margin: 0;
-	}
-
-	::-webkit-scrollbar {
-		width: 8px;
-		height: 8px;
-	}
-
-	::-webkit-scrollbar-track {
-		border-radius: 100vh;
-		background: theme("colors.zinc.800");
-	}
-
-	::-webkit-scrollbar-thumb {
-		background: theme("colors.zinc.600");
-		border-radius: 100vh;
-	}
-
-	::-webkit-scrollbar-thumb:hover {
-		background: theme("colors.zinc.500");
 	}
 }
 
@@ -69,4 +53,34 @@
 }
 .circle-3 {
 	background-color: rgb(34, 197, 94);
+}
+
+.dark {
+	--scroll-track-color: theme("colors.zinc.700");
+	--scroll-thumb-color: theme("colors.zinc.600");
+	--scroll-thumb-hover-clr: theme("colors.zinc.500");
+}
+.light {
+	--scroll-track-color: theme("colors.slate.500");
+	--scroll-thumb-color: theme("colors.slate.400");
+	--scroll-thumb-hover-clr: theme("colors.slate.600");
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+
+::-webkit-scrollbar-track {
+	border-radius: 100vh;
+	background: var(--scroll-track-color);
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--scroll-thumb-color);
+	border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: var(--scroll-thumb-hover-clr);
 }
